[92] refactor code for create and delete add some changes for update